--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules/
 media/
 /.vscode
 /.venv
+/.idea
 /StarBurger/__pycache__
 /foodcartapp/__pycache__
 /foodcartapp/migrations/__pycache__
