- Added fetch_coordinates func to get_restaurant_distance func in models.py. - Added cache to DataBase. - Change get_restaurant to get_restaurant_distance in order_items.html. - Added in requirements.txt environ, geopy, requests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ django-debug-toolbar==2.2
 dj-database-url==0.5.0
 Pillow==7.1.2
 djangorestframework~=3.12.1
+environs==9.2.0
+geopy==2.0.0
+requests~=2.25.0
